--- a/css/style2.css
+++ b/css/style2.css
@@ -3,7 +3,12 @@ body{
 }
 h1{
     color: cyan;
+    font-size: larger;
 }
 p{
     color: chocolate;
+}
+img{
+    size: 300px;
+    border: 5px;
 }
