--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,17 @@ body{
     font-family: fantasy;
 }
 h1{
-    color: greenyellow;
+    color: royalblue;
     font-size: larger;
     text-align: center;
 }
 p{
-    color: greenyellow;
+    color: rgb(33, 107, 245);
 }
 button{
     padding: 10%;
     color: blue;
-    size: 20px;
+    size: 5px;
+    border: 5px;
+    background-color: salmon;
 }
