--- a/css/style2.css
+++ b/css/style2.css
@@ -38,3 +38,12 @@ img{
     background-color: #ca9503;
     color: white;
   }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
