--- a/css/butt.css
+++ b/css/butt.css
@@ -27,3 +27,12 @@ main{
     background-color: #ca9503;
     color: white;
   }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
