--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,12 @@ button{
     background-color: #ca9503;
     color: white;
   }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
