--- a/css/thetechnote.css
+++ b/css/thetechnote.css
@@ -37,3 +37,12 @@ p{
     background-color: #ca9503;
     color: white;
   }
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+  }
