--- a/css/styles.css
+++ b/css/styles.css
@@ -48,8 +48,8 @@ button{
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
-    background-color: red;
+    width: 200%;
+    background-color: black;
     color: white;
     text-align: center;
   }
