--- a/css/butt.css
+++ b/css/butt.css
@@ -28,11 +28,12 @@ main{
     color: white;
   }
   .footer {
+    height: 10%;
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 200%;
-    background-color: red;
+    width: 100%;
+    background-color: black;
     color: white;
     text-align: center;
   }
