--- a/css/thetechnote.css
+++ b/css/thetechnote.css
@@ -38,11 +38,12 @@ p{
     color: white;
   }
   .footer {
+    height: 10%;
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 200%;
-    background-color: red;
+    width: 100%;
+    background-color: black;
     color: white;
     text-align: center;
   }
