--- a/css/butt.css
+++ b/css/butt.css
@@ -1,10 +1,12 @@
-main{
-  background-color: black;
+body{
+background-color: #333;
+font-family: 'Permanent Marker', cursive;
 }
 .topnav {
     background-color: #333;
     overflow: hidden;
   }
+  
   
   /* Style the links inside the navigation bar */
   .topnav a {
