--- a/css/style2.css
+++ b/css/style2.css
@@ -1,18 +1,23 @@
 body {
-  background-image: url(https://coolbackgrounds.io/images/unsplash/samuel-zeller-medium-b832fe04.jpg);
+  background-color: #ddd;
+  font-family: 'Permanent Marker', cursive;
 }
-
+button {
+padding: 5px;
+color: #f2f2f2;
+background-color: #333;
+}
 h1 {
-  color: cyan;
+  color: black;
   font-size: larger;
 }
 
 p {
-  color: chocolate;
+  color: black;
 }
 
 img {
-  size: 300px;
+  size: 800px;
   border: 5px;
 }
 
