--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ button{
   }
   .footer {
     height: 50px;
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
