--- a/css/thetechnote.css
+++ b/css/thetechnote.css
@@ -40,7 +40,7 @@ p{
   }
   .footer {
     height: 50px;
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
