--- a/css/butt.css
+++ b/css/butt.css
@@ -31,7 +31,7 @@ font-family: 'Permanent Marker', cursive;
   }
   .footer {
     height: 50px;
-    position: fixed;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
