--- a/css/butt.css
+++ b/css/butt.css
@@ -1,6 +1,7 @@
 body{
 background-color: #333;
 font-family: 'Permanent Marker', cursive;
+border-radius: 25px;
 }
 .topnav {
     background-color: #333;
