--- a/css/thetechnote.css
+++ b/css/thetechnote.css
@@ -1,6 +1,7 @@
 body{
     background-color: #ddd;
     font-family: 'Permanent Marker', cursive;
+    border-radius: 25px;
 }
 title{
     text-align: center ;
